JDK-8300659 : Refactor TestMemoryAwareness to use WhiteBox api for host values
  • Type: Bug
  • Component: core-svc
  • Sub-Component: java.lang.management
  • Priority: P3
  • Status: Resolved
  • Resolution: Fixed
  • OS: linux
  • CPU: generic
  • Submitted: 2023-01-19
  • Updated: 2025-10-17
  • Resolved: 2023-01-25
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 11 JDK 17 JDK 21 JDK 8
11.0.21-oracleFixed 17.0.9-oracleFixed 21 b07Fixed 8u461Fixed
Related Reports
Relates :  
Description
In prep for JDK-8299858 it would be good to refactor the test TestMemoryAwareness.java. It currently does some imprecise matching in case swap accounting is turned off. We should fix this properly by adding WhiteBox API for retrieving physical (container host) values for memory and swap and do the proper assertions in the test.

It's also an enabler for a test for JDK-8299858.
Comments
Fix request [11u] I backport this for parity with 11.0.21-oracle. Whitebox obviously differs in location between 11 and head. Needed adaptations. In all affected files, some chunks did not apply. Manual resolution was straightforward. GHA and SAP-internal tests succeeded.
06-07-2023

A pull request was submitted for review. URL: https://git.openjdk.org/jdk11u-dev/pull/2031 Date: 2023-07-05 15:56:16 +0000
05-07-2023

Fix Request (17u): Should get backported for parity with 17.0.9-oracle. Applies cleanly except Copyright year change.
22-06-2023

A pull request was submitted for review. URL: https://git.openjdk.org/jdk17u-dev/pull/1484 Date: 2023-06-21 15:08:42 +0000
21-06-2023

Changeset: 3c61d5aa Author: Severin Gehwolf <sgehwolf@openjdk.org> Date: 2023-01-25 10:24:33 +0000 URL: https://git.openjdk.org/jdk/commit/3c61d5aa48606dab2d2c639d5f0a56313476917d
25-01-2023

A pull request was submitted for review. URL: https://git.openjdk.org/jdk/pull/12097 Date: 2023-01-19 13:57:57 +0000
19-01-2023