8300659: Refactor TestMemoryAwareness to use WhiteBox api for host values